services/mynodeportservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: mynodeportservice
spec:
  selector:
    app: mypod
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 7000
      nodePort: 30001
  externalIPs:
    - 80.11.12.12
