services/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
    - http:
        paths:
        - path: /mypath1
          pathType: Prefix
          backend:
            service:
              name: myclusteripservice1
              port:
                number: 8080
        - path: /mypath2
          pathType: Prefix
          backend:
            service:
              name: myclusteripservice2
              port:
                number: 8080
